--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "config": "^3.3.9",
+    "dotenv": "^16.3.1",
     "permitio": "^2.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
